# benchkitv2

./: .gitignore  DOCUMENTATION.md  LICENSE  README.md  _env.bat  gen_synth_one.bat  package-lock.json  package.json  pipelinedesc.txt  playwright.config.js  pyproject.toml  run_all.bat  run_all.py  run_all_matrix.bat  run_one_each.bat  run_smoke_check.bat  smoke_all_outputs.bat  smoke_all_techs_8ch_600s.bat  unittest.py
benchkit/: datoviz_bench_utils.py  loaders.py  stats.py
scripts/: merge_outputs_csv.py
scripts/analysis/: aggregate_by_tool_phase.py  aggregate_by_tool_window_channels.py  make_window_channel_matrices.py  plot_window_channel_matrices.py  unify_outputs_csv.py
scripts/data/: gen_synth_one.py
scripts/desktop/: _fastplotlib_common.py  bench_datoviz.py  bench_fastplotlib.py  bench_fastplotlib_a1.py  bench_fastplotlib_a2.py  bench_mne_rawplot.py  bench_pyqtgraph_A1_throughput_v2.py  bench_pyqtgraph_A2_cadenced_v2.py  bench_pyqtgraph_tffr_v2.py  bench_vispy.py  bench_vispy_A1_throughput.py  bench_vispy_A2_cadenced.py  requirements-desktop.txt
scripts/io/: bench_io.py  bench_io_v2.py
scripts/web/: bench_plotly_A1_throughput.py  bench_plotly_A2_cadenced.py  bench_plotly_tffr.py  collect_console_playwright.py  collect_plotly_console_playwright_v2.py  collect_plotly_console_selenium_v2.py  gen_d3_html.py  gen_plotly_html_v2.py
src/benchkitv2/: __init__.py  cli.py  runner.py  web_console.py
tests/: test_cli.py  test_datoviz_utils.py  test_fastplotlib_sequences.py
